--- a/Makefile.cmssw
+++ b/Makefile.cmssw
@@ -1,19 +1,28 @@
 #SPECIFIC MAKEFILE TO RUN UNDER CMSSW ONLY
 
-CC=g++ -fPIC -std=c++0x #Compiler used #fPIC useful to get debug messages #C++11
+CC=g++ -fPIC #Compiler used #fPIC useful to get debug messages #C++11 option: -std=c++0x
 DEBUG = -g
 CFLAGS = -c #Compilation options
 ROOTFLAGS = `root-config --glibs --cflags`
 
 LFLAGS = $(DEBUG) -lTMVA -lPyMVA -lrt
-LFLAGS+= -L/cvmfs/cms.cern.ch/slc6_amd64_gcc700/external/tensorflow/1.6.0-gnimlf2/lib/ -ltensorflow_framework
-LFLAGS+= -L/cvmfs/cms.cern.ch/slc6_amd64_gcc700/external/protobuf/3.5.2/lib/ -lprotobuf
-LFLAGS+= -L/nfs/dust/cms/user/ntonon/CMSSW_10_2_20/lib/slc6_amd64_gcc700 -lPhysicsToolsTensorFlow -lFWCoreUtilities #CMSSW
+LFLAGS+= -L/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/lib/ -ltensorflow_framework
+LFLAGS+= -L/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/protobuf/3.5.2/lib/ -lprotobuf
+LFLAGS+= -L${CMSSW_BASE}/lib/${SCRAM_ARCH} -lPhysicsToolsTensorFlow #-lFWCoreUtilities #CMSSW
 
-INCFLAGS = -I/nfs/dust/cms/user/ntonon/CMSSW_10_2_20/src
-INCFLAGS+= -I/cvmfs/cms.cern.ch/slc6_amd64_gcc700/external/tensorflow/1.6.0-gnimlf2/include
-INCFLAGS+= -I/cvmfs/cms.cern.ch/slc6_amd64_gcc700/external/eigen/64060da8461a627eb25b5a7bc0616776068db58b/include/eigen3
-INCFLAGS+= -I/cvmfs/cms.cern.ch/slc6_amd64_gcc700/external/protobuf/3.5.2/include
+#-- Paths copied from : https://gitlab.cern.ch/cms-desy-topv/potato-common/-/blob/master/python/Setup.py
+# to find the correct libraries and include paths for tensorflow,
+#     you may have to look under "USE" and include these stuff as well:
+#       scram tool list
+#       scram tool info tensorflow-cc
+#       scram tool info tensorflow-c
+#       scram tool info eigen
+#       scram tool info protobuf
+INCFLAGS = -I${CMSSW_BASE}/src
+INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/include
+INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/eigen/64060da8461a627eb25b5a7bc0616776068db58b/include/eigen3
+INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/protobuf/3.5.2/include
+INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/include/tensorflow/core/public #FIXME
 
 SRCS = $(wildcard *.cxx) #Source files are all files with .cxx extension
 HDRS = $(wildcard *.h) #Header files are all files with .h extension
@@ -35,15 +44,15 @@ all: $(DICT) $(LIB) $(MY_ANALYSIS) $(ROCS) $(YIELD) $(SPLIT)
 
 $(DICT): Utils/WCPoint.h Utils/WCFit.h Utils/TH1EFT.h
 	@echo "-- Creating dictionnary $(DICT) --"
-	@rootcling -f $(DICT) -rml $(LIB) -rmf myLib.rootmap -c -p Utils/WCPoint.h Utils/WCFit.h Utils/TH1EFT.h Utils/LinkDef.h
+	rootcling -f $(DICT) -rml $(LIB) -rmf myLib.rootmap -c -p Utils/WCPoint.h Utils/WCFit.h Utils/TH1EFT.h Utils/LinkDef.h
 
 $(LIB): Utils/TH1EFT.cxx $(DICT)
 	@echo "-- Creating shared library $(LIB) --"
-	@$(CC) $(INCFLAGS) $(ROOTFLAGS) $(DICT) Utils/TH1EFT.cxx -shared -o $(LIB)
+	$(CC) $(INCFLAGS) $(ROOTFLAGS) $(DICT) Utils/TH1EFT.cxx -shared -o $(LIB)
 	@echo ""
 
 #Obtain executables from object files
-$(MY_ANALYSIS): Utils/TH1EFT.cxx Utils/CMSSW_TensorFlow.o Utils/TFModel.o Utils/Helper.o ROCS/ROC_Plotter.o analysis_main.o TopEFT_analysis.o $(LIB)
+$(MY_ANALYSIS): Utils/TH1EFT.cxx Utils/TFModel.o Utils/Helper.o ROCS/ROC_Plotter.o analysis_main.o TopEFT_analysis.o $(LIB)
 	@echo "###################################"
 	@echo "-- Creating executable ./$(MY_ANALYSIS) --"
 	@$(CC) $^ -o $@ $(ROOTFLAGS) $(LFLAGS) $(INCFLAGS) -L. $(LIB)
