--- a/Makefile.local
+++ b/Makefile.local
@@ -1,28 +1,26 @@
-#SPECIFIC MAKEFILE TO RUN UNDER CMSSW ONLY
+# $< = name of first dependancy
+# $@ = name of target ("main")
+# -c asks the compiler not to link. Allows to get a compiled "object file" which does not contain
+# -o specify target
+# $^ all prerequisites in the rule
 
-CC=g++ -fPIC #Compiler used #fPIC useful to get debug messages #C++11 option: -std=c++0x
+#Define variables
+CC=g++ -fPIC #Compiler used #fPIC useful to get debug messages
 DEBUG = -g
-CFLAGS = -c #Compilation options
+CFLAGS = -c $(DEBUG) #Compilation options
 ROOTFLAGS = `root-config --glibs --cflags`
 
-LFLAGS = $(DEBUG) -lTMVA -lPyMVA -lrt
-LFLAGS+= -L/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/lib/ -ltensorflow_framework
-LFLAGS+= -L/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/protobuf/3.5.2/lib/ -lprotobuf
-LFLAGS+= -L${CMSSW_BASE}/lib/${SCRAM_ARCH} -lPhysicsToolsTensorFlow #-lFWCoreUtilities #CMSSW
+LFLAGS = $(DEBUG) -lTMVA -lPyMVA
+LFLAGS+= -L/home/ntonon/Documents/Programmes/tensorflow/bazel-bin/tensorflow -Wl,--allow-multiple-definition -Wl,--whole-archive -ltensorflow_framework -Wl,--whole-archive -Wl,--no-as-needed -ltensorflow_cc #-lprotobuf
 
-#-- Paths copied from : https://gitlab.cern.ch/cms-desy-topv/potato-common/-/blob/master/python/Setup.py
-# to find the correct libraries and include paths for tensorflow,
-#     you may have to look under "USE" and include these stuff as well:
-#       scram tool list
-#       scram tool info tensorflow-cc
-#       scram tool info tensorflow-c
-#       scram tool info eigen
-#       scram tool info protobuf
-INCFLAGS = -I${CMSSW_BASE}/src
-INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/include
-INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/eigen/64060da8461a627eb25b5a7bc0616776068db58b/include/eigen3
-INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/protobuf/3.5.2/include
-INCFLAGS+= -I/cvmfs/cms.cern.ch/${SCRAM_ARCH}/external/tensorflow/1.6.0-gnimlf2/include/tensorflow/core/public #FIXME
+INCFLAGS = -I./include
+INCFLAGS += -I./Utils
+INCFLAGS += -I/home/ntonon/Documents/Programmes/tensorflow
+INCFLAGS += -I/home/ntonon/Documents/Programmes/tensorflow/bazel-genfiles
+INCFLAGS += -I/home/ntonon/Documents/Programmes/tensorflow/bazel-tensorflow/external/eigen_archive
+INCFLAGS += -I/home/ntonon/Documents/Programmes/tensorflow/bazel-tensorflow/external/com_google_absl
+INCFLAGS += -I/usr/local/include/google/protobuf
+INCFLAGS += -I/usr/local/include/google/tensorflow
 
 SRCS = $(wildcard *.cxx) #Source files are all files with .cxx extension
 HDRS = $(wildcard *.h) #Header files are all files with .h extension
@@ -52,7 +50,7 @@ $(LIB): Utils/TH1EFT.cxx $(DICT)
 	@echo ""
 
 #Obtain executables from object files
-$(MY_ANALYSIS): Utils/TH1EFT.cxx Utils/TFModel.o Utils/Helper.o ROCS/ROC_Plotter.o analysis_main.o TopEFT_analysis.o $(LIB)
+$(MY_ANALYSIS): Utils/TH1EFT.cxx Utils/CMSSW_TensorFlow.o Utils/TFModel.o Utils/Helper.o ROCS/ROC_Plotter.o analysis_main.o TopEFT_analysis.o $(LIB)
 	@echo "###################################"
 	@echo "-- Creating executable ./$(MY_ANALYSIS) --"
 	@$(CC) $^ -o $@ $(ROOTFLAGS) $(LFLAGS) $(INCFLAGS) -L. $(LIB)
